# lewis-strat-trader

./: .env.example  .gitattributes  .gitignore  HANDOFF.md  README.md  RESEARCH_NOTE.md  SIGNALS.md  _event_study_trump.py  _oos_multi_asset.py  _oos_regime_bb.py  _oos_regime_bb_directional.py  _optimize_regime_bb_directional.py  _phase2_reaction.py  _val_trump_overlay.py  dashboard.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: signoff_reminder.sh
.claude/skills/signoff/: SKILL.md
.claude/skills/worklog/: SKILL.md
.streamlit/: config.toml
docs/: COMMUNITY_STRATEGIES.md  DARREN_CHARTER.md  DATA_SOURCES.md  DEPLOY.md  HERMES_SETUP_2026-06-15.md  PLATFORM_PLAN.md  TRUMP_DIRECTIONAL_OOS.md  TRUMP_EVENT_STUDY.md  VPS_MIGRATION_2026-07.md  VPS_MIGRATION_PLAN.md  VPS_SETUP.md  WORKLOG.md
docs/PAPER/: COMBINED_PREMIA.md  METHODOLOGY_REVIEW.md  OUTLINE.md  PHASE2_RESULTS.md  PLACEBO_RESULTS.md  PREREGISTRATION.md  RELATED_WORK.md  RELATED_WORK_VERIFIED.md  ROADMAP.md  SIGNAL_MANIFEST.json  STRATEGY_RESEARCH.md  SUBMISSION.md  THESIS_STRUCTURE.md  TRUMP_ANALYSIS_CHECKPOINT.md  UNDERGRAD_PAPER.md  progress.json
docs/design/: tournament_mockup.html  tournament_mockup_v2.html
local_system/: __init__.py  backtester.py  lake_adapter.py  live_board.py  live_portfolio.py  paper_trader.py  portfolio_backtester.py  scoring.py  tradfi_data.py
local_system/cli/: optimize.py  reflect.py  signals.py  status.py  walkforward.py
local_system/signals/: __init__.py  binance_klines.py  correlations.py  futures.py  live_rollup.py  macro.py  trump_alert.py  trump_archive.py  trump_classify.py  trump_overlay.py  trump_signal.py  trump_signal_llm.py  trump_signal_local.py
local_system/strategies/: __init__.py  base.py  bb_rsi_dip.py  bollinger.py  breakout.py  daily_swing.py  ema_crossover.py  ensemble.py  markov.py  mtf_bb_vol.py  mtf_confluence.py  mtf_ls.py  regime_bb.py  registry.py  rsi_meanrev.py
local_system/tools/: consolidate_lake.py
scripts/: export_bootstrap.sh  lake_snapshot.sh  post-commit  restore_from_drive.sh
scripts/nginx/: lake.conf  stratbot.conf
state/: carry_hardened_grid.json  carry_hardened_grid_2026-07-11.json  carry_hardened_grid_2026-07-12.json  carry_hardened_grid_2026-07-13.json  carry_hardened_grid_2026-07-14.json  carry_hardened_grid_2026-07-15.json  challengers.yaml  combined_premia.json  daily_roundup_2026-07-02.json  daily_roundup_2026-07-03.json  daily_roundup_2026-07-04.json  daily_roundup_2026-07-05.json  daily_roundup_2026-07-07.json  daily_roundup_2026-07-08.json  daily_roundup_2026-07-09.json  daily_roundup_2026-07-10.json  daily_roundup_2026-07-11.json  daily_roundup_2026-07-12.json  daily_roundup_2026-07-13.json  daily_roundup_2026-07-14.json  daily_roundup_2026-07-15.json  daily_roundup_2026-07-16.json  run_carry_refresh_2026-07-12.py  run_carry_refresh_deep_2026-07-12.py  strategy.yaml
(+23 files in other folders)
