[project]
name = "lewis-strat-trader"
version = "0.1.0"
description = "Self-improving algorithmic trading system with walk-forward backtesting and traffic light strategy promotion"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "numpy",
    "pandas",
    "duckdb",
    "scipy",
    "rich",
    "yfinance",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
    "feedparser>=6.0.12",
    "vadersentiment>=3.3.2",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_system"]

[tool.ruff]
target-version = "py311"
line-length = 100
include = ["local_system/**/*.py", "*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["local_system"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
